--- a/.yamato/urp_foundation-osx_apple_silicon-metal.yml
+++ b/.yamato/urp_foundation-osx_apple_silicon-metal.yml
@@ -39,8 +39,8 @@ URP_Foundation_OSX_Apple_Silicon_Metal_Standalone_mono_Linear_trunk:
 Build_URP_Foundation_OSX_Apple_Silicon_Metal_Standalone_mono_Linear_trunk:
     name: Build URP_Foundation on OSX_Apple_Silicon_Metal_mono_Linear_Standalone_build_Player on version trunk
     agent:
-        type: Unity::metal::devkit
-        image: slough-ops/macos-10.15-base:stable
+        type: Unity::VM::osx
+        image: desktop/unity-macos-10.15-xcode-12.2:stable
         flavor: m1.mac
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
@@ -211,8 +211,8 @@ URP_Foundation_OSX_Apple_Silicon_Metal_Standalone_cache_mono_Linear_trunk:
 Build_URP_Foundation_OSX_Apple_Silicon_Metal_Standalone_cache_mono_Linear_trunk:
     name: Build URP_Foundation on OSX_Apple_Silicon_Metal_mono_Linear_Standalone_cache_build_Player on version trunk
     agent:
-        type: Unity::metal::devkit
-        image: slough-ops/macos-10.15-base:stable
+        type: Unity::VM::osx
+        image: desktop/unity-macos-10.15-xcode-12.2:stable
         flavor: m1.mac
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
@@ -271,8 +271,8 @@ URP_Foundation_OSX_Apple_Silicon_Metal_Standalone_XR_cache_mono_Linear_trunk:
 Build_URP_Foundation_OSX_Apple_Silicon_Metal_Standalone_XR_cache_mono_Linear_trunk:
     name: Build URP_Foundation on OSX_Apple_Silicon_Metal_mono_Linear_Standalone_XR_cache_build_Player on version trunk
     agent:
-        type: Unity::metal::devkit
-        image: slough-ops/macos-10.15-base:stable
+        type: Unity::VM::osx
+        image: desktop/unity-macos-10.15-xcode-12.2:stable
         flavor: m1.mac
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
@@ -334,8 +334,8 @@ URP_Foundation_OSX_Apple_Silicon_Metal_Standalone_mono_Linear_CUSTOM-REVISION:
 Build_URP_Foundation_OSX_Apple_Silicon_Metal_Standalone_mono_Linear_CUSTOM-REVISION:
     name: Build URP_Foundation on OSX_Apple_Silicon_Metal_mono_Linear_Standalone_build_Player on version CUSTOM-REVISION
     agent:
-        type: Unity::metal::devkit
-        image: slough-ops/macos-10.15-base:stable
+        type: Unity::VM::osx
+        image: desktop/unity-macos-10.15-xcode-12.2:stable
         flavor: m1.mac
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
@@ -529,8 +529,8 @@ URP_Foundation_OSX_Apple_Silicon_Metal_Standalone_cache_mono_Linear_CUSTOM-REVIS
 Build_URP_Foundation_OSX_Apple_Silicon_Metal_Standalone_cache_mono_Linear_CUSTOM-REVISION:
     name: Build URP_Foundation on OSX_Apple_Silicon_Metal_mono_Linear_Standalone_cache_build_Player on version CUSTOM-REVISION
     agent:
-        type: Unity::metal::devkit
-        image: slough-ops/macos-10.15-base:stable
+        type: Unity::VM::osx
+        image: desktop/unity-macos-10.15-xcode-12.2:stable
         flavor: m1.mac
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
@@ -596,8 +596,8 @@ URP_Foundation_OSX_Apple_Silicon_Metal_Standalone_XR_cache_mono_Linear_CUSTOM-RE
 Build_URP_Foundation_OSX_Apple_Silicon_Metal_Standalone_XR_cache_mono_Linear_CUSTOM-REVISION:
     name: Build URP_Foundation on OSX_Apple_Silicon_Metal_mono_Linear_Standalone_XR_cache_build_Player on version CUSTOM-REVISION
     agent:
-        type: Unity::metal::devkit
-        image: slough-ops/macos-10.15-base:stable
+        type: Unity::VM::osx
+        image: desktop/unity-macos-10.15-xcode-12.2:stable
         flavor: m1.mac
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
