--- a/.yamato/shadergraph-osx_apple_silicon-metal.yml
+++ b/.yamato/shadergraph-osx_apple_silicon-metal.yml
@@ -39,8 +39,8 @@ ShaderGraph_OSX_Apple_Silicon_Metal_Standalone_mono_Linear_trunk:
 Build_ShaderGraph_OSX_Apple_Silicon_Metal_Standalone_mono_Linear_trunk:
     name: Build ShaderGraph on OSX_Apple_Silicon_Metal_mono_Linear_Standalone_build_Player on version trunk
     agent:
-        type: Unity::metal::devkit
-        image: slough-ops/macos-10.15-base:stable
+        type: Unity::VM::osx
+        image: desktop/unity-macos-10.15-xcode-12.2:stable
         flavor: m1.mac
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
@@ -155,8 +155,8 @@ ShaderGraph_OSX_Apple_Silicon_Metal_Standalone_cache_mono_Linear_trunk:
 Build_ShaderGraph_OSX_Apple_Silicon_Metal_Standalone_cache_mono_Linear_trunk:
     name: Build ShaderGraph on OSX_Apple_Silicon_Metal_mono_Linear_Standalone_cache_build_Player on version trunk
     agent:
-        type: Unity::metal::devkit
-        image: slough-ops/macos-10.15-base:stable
+        type: Unity::VM::osx
+        image: desktop/unity-macos-10.15-xcode-12.2:stable
         flavor: m1.mac
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
@@ -218,8 +218,8 @@ ShaderGraph_OSX_Apple_Silicon_Metal_Standalone_mono_Linear_CUSTOM-REVISION:
 Build_ShaderGraph_OSX_Apple_Silicon_Metal_Standalone_mono_Linear_CUSTOM-REVISION:
     name: Build ShaderGraph on OSX_Apple_Silicon_Metal_mono_Linear_Standalone_build_Player on version CUSTOM-REVISION
     agent:
-        type: Unity::metal::devkit
-        image: slough-ops/macos-10.15-base:stable
+        type: Unity::VM::osx
+        image: desktop/unity-macos-10.15-xcode-12.2:stable
         flavor: m1.mac
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
@@ -349,8 +349,8 @@ ShaderGraph_OSX_Apple_Silicon_Metal_Standalone_cache_mono_Linear_CUSTOM-REVISION
 Build_ShaderGraph_OSX_Apple_Silicon_Metal_Standalone_cache_mono_Linear_CUSTOM-REVISION:
     name: Build ShaderGraph on OSX_Apple_Silicon_Metal_mono_Linear_Standalone_cache_build_Player on version CUSTOM-REVISION
     agent:
-        type: Unity::metal::devkit
-        image: slough-ops/macos-10.15-base:stable
+        type: Unity::VM::osx
+        image: desktop/unity-macos-10.15-xcode-12.2:stable
         flavor: m1.mac
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
