--- a/com.unity.shadergraph/Editor/Generation/Targets/BuiltIn/Editor/ShaderGraph/Templates/ShaderPass.template
+++ b/com.unity.shadergraph/Editor/Generation/Targets/BuiltIn/Editor/ShaderGraph/Templates/ShaderPass.template
@@ -87,6 +87,9 @@ $splice(InterpolatorPack)
 // Graph Properties
 $splice(GraphProperties)
 
+// Graph Includes
+$splice(GraphIncludes)
+
 // Graph Functions
 $splice(GraphFunctions)
 
