Adding the newly created yaml files

--- a/.yamato/all-urp_performance_boatattack.yml
+++ b/.yamato/all-urp_performance_boatattack.yml
@@ -34,6 +34,10 @@ PR_URP_Performance_BoatAttack_trunk:
          rerun: on-new-revision
       -  path: .yamato/urp_performance_boatattack-android-vulkan.yml#URP_Performance_BoatAttack_Android_Vulkan_performance_build_editmode_il2cpp_Linear_trunk
          rerun: on-new-revision
+      -  path: .yamato/urp_performance_boatattack-xrquest-opengles3.yml#URP_Performance_BoatAttack_XRQuest_OpenGLES3_performance_playmode_runtime_il2cpp_Linear_trunk
+         rerun: on-new-revision
+      -  path: .yamato/urp_performance_boatattack-xrquest-vulkan.yml#URP_Performance_BoatAttack_XRQuest_Vulkan_performance_playmode_runtime_il2cpp_Linear_trunk
+         rerun: on-new-revision
       -  path: .yamato/urp_performance_boatattack-iphone-metal.yml#URP_Performance_BoatAttack_iPhone_Metal_performance_playmode_runtime_il2cpp_Linear_trunk
          rerun: on-new-revision
       -  path: .yamato/urp_performance_boatattack-iphone-metal.yml#URP_Performance_BoatAttack_iPhone_Metal_performance_build_editmode_il2cpp_Linear_trunk
@@ -85,6 +89,10 @@ PR_URP_Performance_BoatAttack_CUSTOM-REVISION:
       -  path: .yamato/urp_performance_boatattack-android-vulkan.yml#URP_Performance_BoatAttack_Android_Vulkan_performance_playmode_runtime_il2cpp_Linear_CUSTOM-REVISION
          rerun: always
       -  path: .yamato/urp_performance_boatattack-android-vulkan.yml#URP_Performance_BoatAttack_Android_Vulkan_performance_build_editmode_il2cpp_Linear_CUSTOM-REVISION
+         rerun: always
+      -  path: .yamato/urp_performance_boatattack-xrquest-opengles3.yml#URP_Performance_BoatAttack_XRQuest_OpenGLES3_performance_playmode_runtime_il2cpp_Linear_CUSTOM-REVISION
+         rerun: always
+      -  path: .yamato/urp_performance_boatattack-xrquest-vulkan.yml#URP_Performance_BoatAttack_XRQuest_Vulkan_performance_playmode_runtime_il2cpp_Linear_CUSTOM-REVISION
          rerun: always
       -  path: .yamato/urp_performance_boatattack-iphone-metal.yml#URP_Performance_BoatAttack_iPhone_Metal_performance_playmode_runtime_il2cpp_Linear_CUSTOM-REVISION
          rerun: always
