--- a/.yamato/_editor_priming.yml
+++ b/.yamato/_editor_priming.yml
@@ -20,7 +20,10 @@ editor:priming:CUSTOM-REVISION:Win:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
     commands:
-      -  pip install unity-downloader-cli --user --upgrade --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
+      -  curl -L https://artifactory.prd.it.unity3d.com/artifactory/api/gpg/key/public | sudo apt-key add -
+      -  sudo sh -c "echo 'deb https://artifactory.prd.it.unity3d.com/artifactory/unity-apt-local bionic main' > /etc/apt/sources.list.d/unity.list"
+      -  sudo apt update
+      -  sudo apt install unity-downloader-cli
       -  unity-downloader-cli -u $CUSTOM_REVISION -o windows --wait --skip-download -c editor -c il2cpp  > unity_revision.txt
     artifacts:
         unity_revision.zip:
@@ -37,9 +40,12 @@ editor:priming:test_min_editor:Win:
         DISPLAY: ":0"
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
-      -  pip install unity-downloader-cli --user --upgrade --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
+      -  curl -L https://artifactory.prd.it.unity3d.com/artifactory/api/gpg/key/public | sudo apt-key add -
+      -  sudo sh -c "echo 'deb https://artifactory.prd.it.unity3d.com/artifactory/unity-apt-local bionic main' > /etc/apt/sources.list.d/unity.list"
+      -  sudo apt update
+      -  sudo apt install unity-downloader-cli
       -  python3 .yamato/script/editor_scripts/get_minimum_editor_version.py tmp_unity_revision.txt
-      -  unity-downloader-cli --source-file tmp_unity_revision.txt -c windows --wait --skip-download -c editor -c il2cpp  > unity_revision.txt
+      -  unity-downloader-cli --source-file tmp_unity_revision.txt -o windows --wait --skip-download -c editor -c il2cpp  > unity_revision.txt
       -  rm tmp_unity_revision.txt
     artifacts:
         unity_revision.zip:
@@ -58,7 +64,10 @@ editor:priming:CUSTOM-REVISION:OSX:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
     commands:
-      -  pip install unity-downloader-cli --user --upgrade --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
+      -  curl -L https://artifactory.prd.it.unity3d.com/artifactory/api/gpg/key/public | sudo apt-key add -
+      -  sudo sh -c "echo 'deb https://artifactory.prd.it.unity3d.com/artifactory/unity-apt-local bionic main' > /etc/apt/sources.list.d/unity.list"
+      -  sudo apt update
+      -  sudo apt install unity-downloader-cli
       -  unity-downloader-cli -u $CUSTOM_REVISION -o macos --wait --skip-download -c editor -c il2cpp  > unity_revision.txt
     artifacts:
         unity_revision.zip:
@@ -75,9 +84,12 @@ editor:priming:test_min_editor:OSX:
         DISPLAY: ":0"
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
-      -  pip install unity-downloader-cli --user --upgrade --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
+      -  curl -L https://artifactory.prd.it.unity3d.com/artifactory/api/gpg/key/public | sudo apt-key add -
+      -  sudo sh -c "echo 'deb https://artifactory.prd.it.unity3d.com/artifactory/unity-apt-local bionic main' > /etc/apt/sources.list.d/unity.list"
+      -  sudo apt update
+      -  sudo apt install unity-downloader-cli
       -  python3 .yamato/script/editor_scripts/get_minimum_editor_version.py tmp_unity_revision.txt
-      -  unity-downloader-cli --source-file tmp_unity_revision.txt -c macos --wait --skip-download -c editor -c il2cpp  > unity_revision.txt
+      -  unity-downloader-cli --source-file tmp_unity_revision.txt -o macos --wait --skip-download -c editor -c il2cpp  > unity_revision.txt
       -  rm tmp_unity_revision.txt
     artifacts:
         unity_revision.zip:
@@ -96,7 +108,10 @@ editor:priming:CUSTOM-REVISION:Linux:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
     commands:
-      -  pip install unity-downloader-cli --user --upgrade --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
+      -  curl -L https://artifactory.prd.it.unity3d.com/artifactory/api/gpg/key/public | sudo apt-key add -
+      -  sudo sh -c "echo 'deb https://artifactory.prd.it.unity3d.com/artifactory/unity-apt-local bionic main' > /etc/apt/sources.list.d/unity.list"
+      -  sudo apt update
+      -  sudo apt install unity-downloader-cli
       -  unity-downloader-cli -u $CUSTOM_REVISION -o linux --wait --skip-download -c editor -c il2cpp  > unity_revision.txt
     artifacts:
         unity_revision.zip:
@@ -113,9 +128,12 @@ editor:priming:test_min_editor:Linux:
         DISPLAY: ":0"
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
-      -  pip install unity-downloader-cli --user --upgrade --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
+      -  curl -L https://artifactory.prd.it.unity3d.com/artifactory/api/gpg/key/public | sudo apt-key add -
+      -  sudo sh -c "echo 'deb https://artifactory.prd.it.unity3d.com/artifactory/unity-apt-local bionic main' > /etc/apt/sources.list.d/unity.list"
+      -  sudo apt update
+      -  sudo apt install unity-downloader-cli
       -  python3 .yamato/script/editor_scripts/get_minimum_editor_version.py tmp_unity_revision.txt
-      -  unity-downloader-cli --source-file tmp_unity_revision.txt -c linux --wait --skip-download -c editor -c il2cpp  > unity_revision.txt
+      -  unity-downloader-cli --source-file tmp_unity_revision.txt -o linux --wait --skip-download -c editor -c il2cpp  > unity_revision.txt
       -  rm tmp_unity_revision.txt
     artifacts:
         unity_revision.zip:
@@ -134,7 +152,10 @@ editor:priming:CUSTOM-REVISION:Android:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
     commands:
-      -  pip install unity-downloader-cli --user --upgrade --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
+      -  curl -L https://artifactory.prd.it.unity3d.com/artifactory/api/gpg/key/public | sudo apt-key add -
+      -  sudo sh -c "echo 'deb https://artifactory.prd.it.unity3d.com/artifactory/unity-apt-local bionic main' > /etc/apt/sources.list.d/unity.list"
+      -  sudo apt update
+      -  sudo apt install unity-downloader-cli
       -  unity-downloader-cli -u $CUSTOM_REVISION -o windows --wait --skip-download -c editor -c il2cpp -c android  > unity_revision.txt
     artifacts:
         unity_revision.zip:
@@ -151,9 +172,56 @@ editor:priming:test_min_editor:Android:
         DISPLAY: ":0"
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
-      -  pip install unity-downloader-cli --user --upgrade --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
+      -  curl -L https://artifactory.prd.it.unity3d.com/artifactory/api/gpg/key/public | sudo apt-key add -
+      -  sudo sh -c "echo 'deb https://artifactory.prd.it.unity3d.com/artifactory/unity-apt-local bionic main' > /etc/apt/sources.list.d/unity.list"
+      -  sudo apt update
+      -  sudo apt install unity-downloader-cli
       -  python3 .yamato/script/editor_scripts/get_minimum_editor_version.py tmp_unity_revision.txt
-      -  unity-downloader-cli --source-file tmp_unity_revision.txt -c windows --wait --skip-download -c editor -c il2cpp -c android  > unity_revision.txt
+      -  unity-downloader-cli --source-file tmp_unity_revision.txt -o windows --wait --skip-download -c editor -c il2cpp -c android  > unity_revision.txt
+      -  rm tmp_unity_revision.txt
+    artifacts:
+        unity_revision.zip:
+            paths:
+              -  "unity_revision.txt"
+editor:priming:CUSTOM-REVISION:XRQuest:
+    name: '[CUSTOM-REVISION,XRQuest] Editor priming'
+    agent:
+        type: Unity::VM
+        image: package-ci/ubuntu:stable
+        flavor: b1.small
+    skip_checkout: true
+    variables:
+        PATH: /home/bokken/bin:/home/bokken/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin:/sbin:/home/bokken/.npm-global/bin
+        DISPLAY: ":0"
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+        CUSTOM_REVISION: custom_revision_not_set
+    commands:
+      -  curl -L https://artifactory.prd.it.unity3d.com/artifactory/api/gpg/key/public | sudo apt-key add -
+      -  sudo sh -c "echo 'deb https://artifactory.prd.it.unity3d.com/artifactory/unity-apt-local bionic main' > /etc/apt/sources.list.d/unity.list"
+      -  sudo apt update
+      -  sudo apt install unity-downloader-cli
+      -  unity-downloader-cli -u $CUSTOM_REVISION -o windows --wait --skip-download -c editor -c il2cpp -c android  > unity_revision.txt
+    artifacts:
+        unity_revision.zip:
+            paths:
+              -  "unity_revision.txt"
+editor:priming:test_min_editor:XRQuest:
+    name: '[Min_Editor,XRQuest] Editor priming'
+    agent:
+        type: Unity::VM
+        image: package-ci/ubuntu:stable
+        flavor: b1.small
+    variables:
+        PATH: /home/bokken/bin:/home/bokken/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin:/sbin:/home/bokken/.npm-global/bin
+        DISPLAY: ":0"
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+    commands:
+      -  curl -L https://artifactory.prd.it.unity3d.com/artifactory/api/gpg/key/public | sudo apt-key add -
+      -  sudo sh -c "echo 'deb https://artifactory.prd.it.unity3d.com/artifactory/unity-apt-local bionic main' > /etc/apt/sources.list.d/unity.list"
+      -  sudo apt update
+      -  sudo apt install unity-downloader-cli
+      -  python3 .yamato/script/editor_scripts/get_minimum_editor_version.py tmp_unity_revision.txt
+      -  unity-downloader-cli --source-file tmp_unity_revision.txt -o windows --wait --skip-download -c editor -c il2cpp -c android  > unity_revision.txt
       -  rm tmp_unity_revision.txt
     artifacts:
         unity_revision.zip:
@@ -172,7 +240,10 @@ editor:priming:CUSTOM-REVISION:iPhone:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
     commands:
-      -  pip install unity-downloader-cli --user --upgrade --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
+      -  curl -L https://artifactory.prd.it.unity3d.com/artifactory/api/gpg/key/public | sudo apt-key add -
+      -  sudo sh -c "echo 'deb https://artifactory.prd.it.unity3d.com/artifactory/unity-apt-local bionic main' > /etc/apt/sources.list.d/unity.list"
+      -  sudo apt update
+      -  sudo apt install unity-downloader-cli
       -  unity-downloader-cli -u $CUSTOM_REVISION -o macos --wait --skip-download -c editor -c il2cpp -c ios  > unity_revision.txt
     artifacts:
         unity_revision.zip:
@@ -189,9 +260,12 @@ editor:priming:test_min_editor:iPhone:
         DISPLAY: ":0"
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
-      -  pip install unity-downloader-cli --user --upgrade --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
+      -  curl -L https://artifactory.prd.it.unity3d.com/artifactory/api/gpg/key/public | sudo apt-key add -
+      -  sudo sh -c "echo 'deb https://artifactory.prd.it.unity3d.com/artifactory/unity-apt-local bionic main' > /etc/apt/sources.list.d/unity.list"
+      -  sudo apt update
+      -  sudo apt install unity-downloader-cli
       -  python3 .yamato/script/editor_scripts/get_minimum_editor_version.py tmp_unity_revision.txt
-      -  unity-downloader-cli --source-file tmp_unity_revision.txt -c macos --wait --skip-download -c editor -c il2cpp -c ios  > unity_revision.txt
+      -  unity-downloader-cli --source-file tmp_unity_revision.txt -o macos --wait --skip-download -c editor -c il2cpp -c ios  > unity_revision.txt
       -  rm tmp_unity_revision.txt
     artifacts:
         unity_revision.zip:
